next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Version 5.6.4 (????-??-??):
---------------------------

- Fixed mapstring.c build problem related to errno (#3401).

Version 5.6.3 (2010-03-22):
---------------------------

- Fixed XML transformation issues with expressions and symbols (#3397) 

- Fixed problem with PostGIS SQL bbox introduced in 5.6.2 (#3324)

- Fix backwards handling of iconv errors (w/ SDE) introduced in 5.6.2 (#2988)


Version 5.6.2 (2010-03-20):
---------------------------

- Check error returns from mapstring functions (#2988)

- Correct mutex locking problem with rasters with no inherent georef. (#3368) 

- Fixed problem with isValidItem vs OGR special attributes (#3356)

- Support wrap character for SVG output (#3367)

- Fixed msMSSQL2008CloseConnection() to free the statement handle 
  properly (#3244)

- Fixed PHP MapScript's metadata.nextkey() that was sometimes skipping some
  entries on first call because the NULL arg was not properly handled (#3363)

- Fixed the query handling with the MSSQL2008 driver (#3058)

- Fixed swig zoomRectangle() method: the maxy in the rect object have to 
  be < miny value (#3286)

- Backport fix for SLD filters column names detection (#3052)

- Backport fix for WFS OGC filters regex tests (#3289)

- Fix crash with GRID layers with no classes (#3352)

- Avoid memory error when building SQL bbox (#3324)

- Determine PgSQL version in a more backwards compatible way (#3291)

- Implemented RFC 52 LayerResultsGetShape support for OGR connection 
  type. (#3069)

- Fixed problem with the oracle driver w/FUNCTION=NONE (#3260)

- Got rid of invalid warning about missing EPSG proj in WMs GetCapabilities
  when map has a valid EPSG proj, but layer doesn't (#2028)

- Correct one pass query problems and OGC filter query (#3305)
