@@ -2053,7 +2053,6 @@ int msWCSGetCoverageMetadata( layerObj *layer, coverageMetadataObj *cm )
       return MS_FAILURE;
     }
 
-
     msGetGDALGeoTransform( hDS, layer->map, layer, cm->geotransform );
 
     cm->xsize = GDALGetRasterXSize( hDS );
